--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -77,7 +77,9 @@
       width: 100%
       display: flex
       justify-content: space-between
+      flex-wrap: wrap
     &-group
+      width: 100%
       position: relative
       margin-bottom: 15px
       flex-basis: 48%
